; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/fatfs/src/drivers/extr_sflash_diskio.c_sflash_disk_flush.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/fatfs/src/drivers/extr_sflash_diskio.c_sflash_disk_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sflash_cache_is_dirty = common dso_local global i32 0, align 4
@FS_MODE_OPEN_WRITE = common dso_local global i32 0, align 4
@sl_FsWrite = common dso_local global i32 0, align 4
@RES_ERROR = common dso_local global i32 0, align 4
@RES_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sflash_disk_flush() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @sflash_cache_is_dirty, align 4
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %4, label %12

4:                                                ; preds = %0
  %5 = load i32, i32* @FS_MODE_OPEN_WRITE, align 4
  %6 = load i32, i32* @sl_FsWrite, align 4
  %7 = call i32 @sflash_access(i32 %5, i32 %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %11, label %9

9:                                                ; preds = %4
  %10 = load i32, i32* @RES_ERROR, align 4
  store i32 %10, i32* %1, align 4
  br label %14

11:                                               ; preds = %4
  store i32 0, i32* @sflash_cache_is_dirty, align 4
  br label %12

12:                                               ; preds = %11, %0
  %13 = load i32, i32* @RES_OK, align 4
  store i32 %13, i32* %1, align 4
  br label %14

14:                                               ; preds = %12, %9
  %15 = load i32, i32* %1, align 4
  ret i32 %15
}

declare dso_local i32 @sflash_access(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
